Move UI components to resources folder